# project1

./: CMakeLists.txt
.github/workflows/: build.yml
src/: main.cpp  version.cpp  version.h
tests/: test_version.cpp
